--- a/style.css
+++ b/style.css
@@ -9,9 +9,29 @@ ul, ol
 }
 body
 {
-    background: #bfbfbf url("images/background.jpg") repeat-x;
+    background: #bfbfbf url("background.jpg") repeat-x;
     font-family: Arial, sans-serif;
 }
+.bw
+{
+    position: absolute;
+    left: 0px;
+    width: 140px;
+    height: 500px;
+    cursor: pointer;
+    background: url("bw-image.jpg") no-repeat;
+    opacity: 0.7;
+}
+.color
+{
+    position: absolute;
+    left: 140px;
+    width: 140px;
+    height: 500px;
+    cursor: pointer;
+    background: url("color-image.jpg") no-repeat;
+}
+
 header
 {
     padding: 30px 0;
@@ -161,4 +181,5 @@ header h1
     background: #b70000;
     border: 2px solid #333;
     font-size: 24px;
+
 }
